# junkcode

./: .gitignore
arucoTest/: checkCalibration.py  video2aruco4.py
bash_utility/: git_puller.sh
calibration/: IPWebcamRecord.py  aruco_vicon_handeye.py  charuco2poses.py  charuco_camera_calibration.py  set_zero_time.py
calibration/charuco_tools/: camera_calibration.py  charuco2poses.py  create_board.py
converters/: allan_dev.m  compute_allan_deviation.py  events_bag2file.py  events_file2bag.py  folder2video.py  mav2bag.py  mav2poses.py  odombag2pose.py  phone_imu_txt2csv.py  position_bag2file.py  rosbag2video.py  vicon_bag2file.py  video2folder.py  video2rosbag.py  video_imu2rosbag.py
glutPractice/: CMakeLists.txt
glutPractice/include/: PlotDataTypes.h  Plotter.h
glutPractice/src/: Plotter.cpp  main.cpp
makeDepthMaps/: CMakeLists.txt  config.txt  main.cpp
modernGLPractice/: CMakeLists.txt
modernGLPractice/include/: shader.h
modernGLPractice/src/: Plotter.cpp  main.cpp
modules/pylie/: LieGroup.py  R3.py  S1.py  SE3.py  SIM3.py  SO3.py  Trajectory.py  analysis.py  plotting.py  pylie.py
practice/: auto_diff  auto_diff.cpp
practice/cmake/: CMakeLists.txt
practice/duals/: duals.cpp  hyperduals.cpp
practice/expressions/: expressions.cpp  expressions2.cpp
practice/random/: create_random_ints.bash  random_ints.cpp
rosbag/: allan_dev.m  events_bag2file.py  make_rosbag2.py  phone_imu_txt2csv.py  position_bag2file.py  vicon_bag2file.py  video2rosbag.py  video_imu2rosbag.py
utility/: animate_horizon.py  animate_rolling_imu.py  animate_trajectory.py  change_delim.py  change_frame.py  compare_trajectories.py  delete_columns.py  destroy_latex_comments.py  equalise_image.py  git_pusher.sh  identify_mav_jitter.py  match_timestamps.py  pdf_dl.py  pdf_rn.py  pfmview.py  plot_image.py  poses2imu.py  record_gyro_mav.py  reduceCSV.py  umeyama2D.py  undistort_image.py
visualisation/: sot3_geometry.py
